--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,11 @@
     <!-- <link href="./src/App.css" rel="stylesheet"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PicLingo</title>
+
+    <!-- google API for google auth -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
+  
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
